[gd_scene load_steps=19 format=3 uid="uid://2dftu4pgnmt8"]

[ext_resource type="Script" path="res://scripts/cutscenes/cutscene_handler.gd" id="1_tyida"]
[ext_resource type="Texture2D" uid="uid://k357p08xnvau" path="res://assets/sprites/cutscenes/intro/intro_template.png" id="2_u7e2m"]
[ext_resource type="Texture2D" uid="uid://h78jgb328ncn" path="res://assets/sprites/cutscenes/intro/cutout/spr_intro_2_porriet.png" id="3_udrcb"]
[ext_resource type="Texture2D" uid="uid://dtcikqlgiick5" path="res://assets/sprites/cutscenes/intro/cutout/spr_intro_2_porriet_afraid.png" id="4_7ymdm"]
[ext_resource type="Texture2D" uid="uid://456ntdwu1xej" path="res://assets/sprites/cutscenes/intro/intro1.png" id="5_ks5xm"]
[ext_resource type="Texture2D" uid="uid://dc3dycd1wgo7a" path="res://assets/sprites/cutscenes/intro/spr_bg_intro.png" id="7_okyso"]
[ext_resource type="Texture2D" uid="uid://jjmbpo54mypa" path="res://assets/sprites/cutscenes/intro/cutout/spr_intro_frame.png" id="8_8q3uf"]
[ext_resource type="Texture2D" uid="uid://1qmyk417y2p2" path="res://assets/sprites/cutscenes/intro/cutout/spr_intro_2_ringmaster.png" id="9_xickg"]
[ext_resource type="Texture2D" uid="uid://cueruggulirdq" path="res://assets/sprites/cutscenes/intro/cutout/spr_intro_2_jester.png" id="10_s5s0y"]
[ext_resource type="Texture2D" uid="uid://bx63vou22wseg" path="res://assets/sprites/cutscenes/intro/intro_3.png" id="11_my21w"]
[ext_resource type="FontFile" uid="uid://bnp8sribl86sv" path="res://assets/fonts/daydream/fnt_daydream.ttf" id="12_c26lo"]
[ext_resource type="SpriteFrames" uid="uid://baa3vo41b1uf0" path="res://assets/sprites/ui/transitions/diamond_transition/spr_transition_diamond.tres" id="13_wvcn2"]
[ext_resource type="AudioStream" uid="uid://dx1qwopialsi7" path="res://assets/audio/mus_intro.ogg" id="14_4dvly"]

[sub_resource type="LabelSettings" id="LabelSettings_cdirn"]
font_size = 11
font_color = Color(1, 0.945098, 0.0705882, 1)

[sub_resource type="Animation" id="Animation_alxy0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FadeAnim:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DialogueBoxLabel:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tortor sem, scelerisque id pellentesque ac, vehicula quis neque. Sed dignissim lacus id tortor maximus, in euismod nulla pharetra. Donec at porttitor lectus, a faucibus massa. Nunc ante dui, malesuada sit amet varius a, dapibus at arcu. Nullam bibendum augue quis mauris"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasModulate/IntroBox:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasModulate/FullCutscene:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_u7e2m")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasModulate/IntroBox/PorrietSprite:texture")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_udrcb")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasModulate/IntroBox:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasModulate/IntroBox/Ringmaster:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CanvasModulate/IntroBox/Jester:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CanvasModulate/IntroBox/PorrietSprite:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CanvasModulate/IntroBox/Trapped:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rn0v1"]
_data = {
"RESET": SubResource("Animation_alxy0")
}

[sub_resource type="Animation" id="Animation_yieed"]
resource_name = "cutscene_1"
length = 8.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 2.63333, 6.03333, 7.76667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"values": [{
"args": [],
"method": &"_pause"
}, {
"args": [],
"method": &"_pause"
}, {
"args": [],
"method": &"_pause"
}, {
"args": [],
"method": &"_pause"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasModulate:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FadeAnim:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.4, 3.93333, 4.2, 4.4)
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DialogueBoxLabel:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 2, 3.56667, 5.53333, 6.73333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": ["Era uma vez... Um reino onde o espetaculo nunca parava e o riso era a lei.", "Ainda que muito jovem, pierrot sonhava em comandar seu proprio circo. Mas a paz nao duraria...", "

", "Sua fam√≠lia foi capturada, oh nao...! E agora? ", "Elu deve dar o show de sua vida ou encarar o seu fim e a todos que ama.
"]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasModulate/IntroBox/PorrietSprite:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 4.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("3_udrcb"), ExtResource("4_7ymdm")]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasModulate/IntroBox/Ringmaster:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(3, 4.2, 6.76667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasModulate/IntroBox/Jester:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(4.2, 6.76667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasModulate/IntroBox:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("CanvasModulate/FullCutscene:texture")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_ks5xm")]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("CanvasModulate/IntroBox:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(4.2, 4.26667, 4.33333, 4.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(5, 0), Vector2(-5, 0), Vector2(0, 0)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("CanvasModulate/IntroBox/PorrietSprite:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 6.76667),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("CanvasModulate/IntroBox/Trapped:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 6.73333, 6.76667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_56and"]
_data = {
"cutscene_1": SubResource("Animation_yieed")
}

[node name="GameIntro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tyida")
next_scene = "res://scenes/screens/levels/lvl_test_0.tscn"

[node name="CanvasModulate" type="CanvasModulate" parent="."]
show_behind_parent = true
z_index = -1
metadata/_edit_lock_ = true

[node name="FullCutscene" type="TextureRect" parent="CanvasModulate"]
use_parent_material = true
offset_right = 320.0
offset_bottom = 180.0
scale = Vector2(2, 2)
mouse_filter = 0
texture = ExtResource("2_u7e2m")
metadata/_edit_lock_ = true

[node name="IntroBox" type="TextureRect" parent="CanvasModulate"]
offset_right = 1280.0
offset_bottom = 720.0
scale = Vector2(0.5, 0.5)
mouse_filter = 0
texture = ExtResource("7_okyso")
metadata/_edit_lock_ = true

[node name="Frame" type="TextureRect" parent="CanvasModulate/IntroBox"]
layout_mode = 0
scale = Vector2(2, 2)
texture = ExtResource("8_8q3uf")

[node name="PorrietSprite" type="TextureRect" parent="CanvasModulate/IntroBox"]
layout_mode = 0
scale = Vector2(2, 2)
texture = ExtResource("3_udrcb")

[node name="Ringmaster" type="TextureRect" parent="CanvasModulate/IntroBox"]
visible = false
layout_mode = 0
scale = Vector2(2, 2)
texture = ExtResource("9_xickg")

[node name="Jester" type="TextureRect" parent="CanvasModulate/IntroBox"]
layout_mode = 0
scale = Vector2(2, 2)
texture = ExtResource("10_s5s0y")

[node name="Trapped" type="TextureRect" parent="CanvasModulate/IntroBox"]
layout_mode = 0
scale = Vector2(2, 2)
texture = ExtResource("11_my21w")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
metadata/_edit_lock_ = true

[node name="SideButtons" type="BoxContainer" parent="."]
clip_contents = true
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 192.0
offset_top = 133.0
offset_right = 574.0
offset_bottom = 288.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
mouse_filter = 0
alignment = 1
vertical = true

[node name="NextButton" type="Button" parent="SideButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_c26lo")
theme_override_font_sizes/font_size = 72
text = "NEXT"

[node name="SkipButton" type="Button" parent="SideButtons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_c26lo")
theme_override_font_sizes/font_size = 85
text = "SKIP"

[node name="FadeAnim" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(320, 180)
scale = Vector2(0.5, 0.5)
sprite_frames = ExtResource("13_wvcn2")
frame_progress = 0.819944

[node name="DialogueBoxLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -273.5
offset_top = -145.0
offset_right = 273.5
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.74902, 0, 1)
theme_override_colors/font_outline_color = Color(0.803922, 0.0392157, 0.172549, 1)
theme_override_fonts/font = ExtResource("12_c26lo")
theme_override_font_sizes/font_size = 2
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc tortor sem, scelerisque id pellentesque ac, vehicula quis neque. Sed dignissim lacus id tortor maximus, in euismod nulla pharetra. Donec at porttitor lectus, a faucibus massa. Nunc ante dui, malesuada sit amet varius a, dapibus at arcu. Nullam bibendum augue quis mauris"
label_settings = SubResource("LabelSettings_cdirn")
autowrap_mode = 2

[node name="CutscenePlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rn0v1"),
"intro_cutscene": SubResource("AnimationLibrary_56and")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_4dvly")
autoplay = true
metadata/_edit_lock_ = true

[connection signal="pressed" from="SideButtons/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="SideButtons/SkipButton" to="." method="_on_skip_button_pressed"]
